--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,5 @@
-// Place your settings in this file to overwrite the default settings
 {
+  // Place your settings in this file to overwrite the default settings
   "workbench.editor.enablePreview": false,
   // "editor.formatOnSave": true,
 
@@ -33,20 +33,21 @@
   "editor.tabCompletion": true,
   "editor.wordWrapColumn": 80,
 
-  "editor.fontSize": 20,
+  "editor.fontSize": 22,
   "files.associations": {
     "*.vue": "vue",
     "*.json": "json",
-    "*.erb": "html",
+    "*.erb": "erb",
     "*.scss.erb": "scss",
+    "*.html.erb": "html",
     "*.js.erb": "javascript"
   },
-"window.zoomLevel": 0,
-"editor.wordWrap": true,
-"workbench.welcome.enabled": false,
-"workbench.colorTheme": "Visual Studio Dark",
-"[javascript]": {
-
-    },
-    "editor.tabSize": 2
-  }
+  "window.zoomLevel": 0,
+  "editor.wordWrap": true,
+  "workbench.welcome.enabled": false,
+  "workbench.colorTheme": "Visual Studio Dark",
+  "[javascript]": {},
+  "editor.tabSize": 2,
+  "editor.renderWhitespace": "all",
+  "explorer.confirmDragAndDrop": false
+}
