--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -30,7 +30,8 @@
     "*.erb": "erb",
     "*.scss.erb": "scss",
     "*.html.erb": "erb",
-    "*.js.erb": "javascript"
+    "*.js.erb": "javascript",
+    "*.leex": "html-eex"
   },
   "window.zoomLevel": -2,
   "editor.wordWrap": true,
@@ -83,7 +84,7 @@
   "elixirLS.suggestSpecs": false,
   "elixirLS.dialyzerEnabled": false,
   "dart.debugExternalLibraries": true,
-  "dart.debugSdkLibraries": true,
+  "dart.debugSdkLibraries": false,
   "prettier.semi": false,
   "beautify.language": {
     "js": {
@@ -209,5 +210,17 @@
       "strike",
       "tt"
     ]
+  },
+  "[dart]": {
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
+    "editor.rulers": [
+      80
+    ],
+    "editor.selectionHighlight": false,
+    "editor.suggest.snippetsPreventQuickSuggestions": false,
+    "editor.suggestSelection": "first",
+    "editor.tabCompletion": "onlySnippets",
+    "editor.wordBasedSuggestions": false
   }
 }
